--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ name = "RareEvents"
 [deps]
 ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
